INTYG-1913: Fix för heders och alignment. nu även i sjukpenning uttökad.

--- a/fk/sjukpenning-utokad/src/main/resources/META-INF/resources/webjars/sjukpenning-utokad/webcert/css/sjukpenning-utokad.css
+++ b/fk/sjukpenning-utokad/src/main/resources/META-INF/resources/webjars/sjukpenning-utokad/webcert/css/sjukpenning-utokad.css
@@ -27,6 +27,12 @@
     padding: 2px 5px;
 }
 
+.no-space-left {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+
 /* When focused and when active is added from checkbox, add highlighted style */
 .form5 .form-control:focus,
 .form6 .form-control:focus  {
